// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appFetchManager.vue renders correctly async-loader 1`] = `
<div
  class="app-fetch-manager"
>
  <async-loader-stub
    params="[object Object]"
    url=""
  />
   
  <!---->
</div>
`;

exports[`appFetchManager.vue renders correctly async-loader and data-operator 1`] = `
<div
  class="app-fetch-manager"
>
  <async-loader-stub
    params="[object Object]"
    url=""
  />
   
  <data-operator-stub />
</div>
`;

exports[`appFetchManager.vue renders correctly data-operator 1`] = `
<div
  class="app-fetch-manager"
>
  <!---->
   
  <data-operator-stub />
</div>
`;

exports[`appFetchManager.vue renders correctly default 1`] = `
<div
  class="app-fetch-manager"
>
  <!---->
   
  <!---->
</div>
`;
